[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/base_track_level.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/kenney-future-narrow.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://menu/pause_menu.gd" type="Script" id=5]
[ext_resource path="res://scenes/tracks/track.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="PauseMenu" type="PopupDialog" parent="."]
pause_mode = 2
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="VSplitContainer" type="VSplitContainer" parent="PauseMenu/MarginContainer"]
margin_right = 472.0
margin_bottom = 260.0
dragger_visibility = 1

[node name="Title" type="Label" parent="PauseMenu/MarginContainer/VSplitContainer"]
margin_right = 472.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
text = "Game Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer/VSplitContainer"]
margin_top = 42.0
margin_right = 472.0
margin_bottom = 260.0
alignment = 1

[node name="ContinueButton" type="Button" parent="PauseMenu/MarginContainer/VSplitContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 472.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 2 )
text = "Continue"

[node name="ExitButton" type="Button" parent="PauseMenu/MarginContainer/VSplitContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 472.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 2 )
text = "Exit to main menu"

[node name="Track" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="PauseMenu/MarginContainer/VSplitContainer/VBoxContainer/ContinueButton" to="PauseMenu" method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VSplitContainer/VBoxContainer/ExitButton" to="PauseMenu" method="_on_ExitButton_pressed"]
